--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Characters</a>
-              <a class="nav-link" href="#">Films</a>
+              <a class="nav-link" href="#chars">Characters</a>
+              <a class="nav-link" href="#filmsz">Films</a>
              <!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </div>
           </div>
@@ -39,16 +39,25 @@
       <h1 class="mb-3"></h1>
       <img class = "ghiblilogo" src = 'Assets/Studio_Ghibli_logo.png'>
         <h4 class="mb-3"></h4>
-        <button class="button" type = "submit" >Show Me Characters</a>
+        <button class="button" type = "submit" >Show Me Info</a>
       </div>
       </div>
       </div>
       </div>
       
       <div class = "characters">
-        <h2 style= text-align:center id = "nextsec">Characters</h2>
+        <h2 style= text-align:center id = "chars">Characters</h2>
         <p>
           <ul>
+            <!-- cross fingers that JavaScript loads here -->
+          </ul>
+        </p>
+      </div>
+
+      <div class = "films">
+        <h2 style = text-align:center id = "filmsz">Films</h2>
+        <p >
+          <ul id ="films">
             <!-- cross fingers that JavaScript loads here -->
           </ul>
         </p>
