--- a/index.html
+++ b/index.html
@@ -39,29 +39,30 @@
       <h1 class="mb-3"></h1>
       <img class = "ghiblilogo" src = 'Assets/Studio_Ghibli_logo.png'>
         <h4 class="mb-3"></h4>
-        <button class="button" type = "submit" >Show Me Info</a>
+        <!-- <button class="button" type = "submit" >Show Me Info</a> -->
       </div>
       </div>
       </div>
       </div>
-      
-      <div class = "characters">
-        <h2 style= text-align:center id = "chars">Characters</h2>
-        <p>
-          <ul>
-            <!-- cross fingers that JavaScript loads here -->
-          </ul>
-        </p>
-      </div>
-
       <div class = "films">
-        <h2 style = text-align:center id = "filmsz">Films</h2>
+        <h2 style = text-align:center id = "filmsz"><u>Films</u></h2>
         <p >
           <ul id ="films">
             <!-- cross fingers that JavaScript loads here -->
           </ul>
         </p>
       </div>
+      <div class = "characters">
+        <h2 style= text-align:center id = "chars"><u>Characters</u></h2>
+        <p>
+          <ul id = "chars">
+            <!-- cross fingers that JavaScript loads here -->
+          </ul>
+        </p>
+      </div>
+
+      
+
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- My Scripts -->
