adjusted layout and added images

--- a/index.html
+++ b/index.html
@@ -47,17 +47,18 @@
       </div>
       </div>
       <div class = "films">
-        <h2 style = text-align:center id = "filmsz"><u>Films</u></h2>
+        <h2 style = text-align:center;padding-bottom:100px><u >Films</u></h2>
         <p>
-          <ul id ="films" >
+          <ul id ="films">
             <!-- cross fingers that JavaScript loads here -->
           </ul>
         </p>
       </div>
-      <div class = "characters">
-        <h2 style= text-align:center id = "chars"><u>Characters</u></h2>
+      <h2 style = text-align:center;color:rgb(40,75,109) ><u>Characters</u></h2>
+        
+      <div class = "characters" >
         <p>
-          <ul id = "chars">
+          <ul class = "chars">
             <!-- cross fingers that JavaScript loads here -->
           </ul>
         </p>
